// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Result should match a snapshot when LOADING false 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="section is-flex has-padding has-margin has-background justify-between items-center"
        data-test=""
      >
        <h3
          class="title is-3 mb-0"
          id=""
        >
          Showing Results for "1"
        </h3>
        <a
          href="/"
        >
          <button
            class="button   is-primary "
            data-test=""
            type="button"
          >
            New Search
          </button>
        </a>
      </section>
      <section
        class="section has-padding has-margin has-background"
        data-test=""
      >
        <div
          class="fade-in"
        >
          <div
            style="overflow: scroll;"
          >
            <table
              class="table is-striped is-fullwidth "
              role="table"
            >
              <thead>
                <tr
                  role="row"
                >
                  <th
                    colspan="1"
                    role="columnheader"
                  >
                    Name
                  </th>
                  <th
                    colspan="1"
                    role="columnheader"
                  >
                    Address
                  </th>
                  <th
                    colspan="1"
                    role="columnheader"
                  >
                    Postcode
                  </th>
                  <th
                    colspan="1"
                    role="columnheader"
                  >
                    Status
                  </th>
                  <th
                    colspan="1"
                    role="columnheader"
                  />
                </tr>
              </thead>
              <tbody>
                <tr
                  class=""
                  role="row"
                >
                  <td
                    role="cell"
                  >
                    Dan Willis
                  </td>
                  <td
                    role="cell"
                  >
                    <span>
                      7, Clyd Eplave
                    </span>
                  </td>
                  <td
                    role="cell"
                  >
                    <span>
                      MK3 7QN
                    </span>
                  </td>
                  <td
                    role="cell"
                  >
                    <span
                      class="capitalize"
                    />
                  </td>
                  <td
                    role="cell"
                  >
                    <button
                      class="button   is-primary "
                      data-test=""
                      type="button"
                    >
                      Edit
                    </button>
                  </td>
                </tr>
                <tr
                  class=""
                  role="row"
                >
                  <td
                    role="cell"
                  >
                    Cerys Haldane
                  </td>
                  <td
                    role="cell"
                  >
                    <span>
                      102, Holwelbury Road
                    </span>
                  </td>
                  <td
                    role="cell"
                  >
                    <span>
                      SG5 3FL
                    </span>
                  </td>
                  <td
                    role="cell"
                  >
                    <span
                      class="capitalize"
                    />
                  </td>
                  <td
                    role="cell"
                  >
                    <button
                      class="button   is-primary "
                      data-test=""
                      type="button"
                    >
                      Edit
                    </button>
                  </td>
                </tr>
                <tr
                  class=""
                  role="row"
                >
                  <td
                    role="cell"
                  >
                    Daniel Scott
                  </td>
                  <td
                    role="cell"
                  >
                    <span>
                      6, Lydbrook Lane, Woburn Sands
                    </span>
                  </td>
                  <td
                    role="cell"
                  >
                    <span>
                      MK17 8GJ
                    </span>
                  </td>
                  <td
                    role="cell"
                  >
                    <span
                      class="capitalize"
                    />
                  </td>
                  <td
                    role="cell"
                  >
                    <button
                      class="button   is-primary "
                      data-test=""
                      type="button"
                    >
                      Edit
                    </button>
                  </td>
                </tr>
                <tr
                  class=""
                  role="row"
                >
                  <td
                    role="cell"
                  >
                    Aidan Cruickshank
                  </td>
                  <td
                    role="cell"
                  >
                    <span>
                      7, Church Lane, Oakley
                    </span>
                  </td>
                  <td
                    role="cell"
                  >
                    <span>
                      MK43 7RJ
                    </span>
                  </td>
                  <td
                    role="cell"
                  >
                    <span
                      class="capitalize"
                    />
                  </td>
                  <td
                    role="cell"
                  >
                    <button
                      class="button   is-primary "
                      data-test=""
                      type="button"
                    >
                      Edit
                    </button>
                  </td>
                </tr>
                <tr
                  class=""
                  role="row"
                >
                  <td
                    role="cell"
                  >
                    Danny Khan
                  </td>
                  <td
                    role="cell"
                  >
                    <span>
                      7, Abraham Close, Willen Park
                    </span>
                  </td>
                  <td
                    role="cell"
                  >
                    <span>
                      MK15 9JA
                    </span>
                  </td>
                  <td
                    role="cell"
                  >
                    <span
                      class="capitalize"
                    />
                  </td>
                  <td
                    role="cell"
                  >
                    <button
                      class="button   is-primary "
                      data-test=""
                      type="button"
                    >
                      Edit
                    </button>
                  </td>
                </tr>
                <tr
                  class=""
                  role="row"
                >
                  <td
                    role="cell"
                  >
                    Ayaan Daniel
                  </td>
                  <td
                    role="cell"
                  >
                    <span>
                      48, Pickering Drive, Emerson Valley
                    </span>
                  </td>
                  <td
                    role="cell"
                  >
                    <span>
                      MK4 2EE
                    </span>
                  </td>
                  <td
                    role="cell"
                  >
                    <span
                      class="capitalize"
                    />
                  </td>
                  <td
                    role="cell"
                  >
                    <button
                      class="button   is-primary "
                      data-test=""
                      type="button"
                    >
                      Edit
                    </button>
                  </td>
                </tr>
                <tr
                  class=""
                  role="row"
                >
                  <td
                    role="cell"
                  >
                    Lola Sheridan
                  </td>
                  <td
                    role="cell"
                  >
                    <span>
                      Modbury House, The Close, Thornton
                    </span>
                  </td>
                  <td
                    role="cell"
                  >
                    <span>
                      MK17 0HD
                    </span>
                  </td>
                  <td
                    role="cell"
                  >
                    <span
                      class="capitalize"
                    />
                  </td>
                  <td
                    role="cell"
                  >
                    <button
                      class="button   is-primary "
                      data-test=""
                      type="button"
                    >
                      Edit
                    </button>
                  </td>
                </tr>
                <tr
                  class=""
                  role="row"
                >
                  <td
                    role="cell"
                  >
                    Brendan Mccrindle
                  </td>
                  <td
                    role="cell"
                  >
                    <span>
                      Osprey Road, Biggleswade
                    </span>
                  </td>
                  <td
                    role="cell"
                  >
                    <span>
                      SG18 8DZ
                    </span>
                  </td>
                  <td
                    role="cell"
                  >
                    <span
                      class="capitalize"
                    />
                  </td>
                  <td
                    role="cell"
                  >
                    <button
                      class="button   is-primary "
                      data-test=""
                      type="button"
                    >
                      Edit
                    </button>
                  </td>
                </tr>
                <tr
                  class=""
                  role="row"
                >
                  <td
                    role="cell"
                  >
                    Danny Clark
                  </td>
                  <td
                    role="cell"
                  >
                    <span>
                      30, Francis Groves Close, Bedford
                    </span>
                  </td>
                  <td
                    role="cell"
                  >
                    <span>
                      MK41 7DH
                    </span>
                  </td>
                  <td
                    role="cell"
                  >
                    <span
                      class="capitalize"
                    />
                  </td>
                  <td
                    role="cell"
                  >
                    <button
                      class="button   is-primary "
                      data-test=""
                      type="button"
                    >
                      Edit
                    </button>
                  </td>
                </tr>
                <tr
                  class=""
                  role="row"
                >
                  <td
                    role="cell"
                  >
                    Esme Sheridan
                  </td>
                  <td
                    role="cell"
                  >
                    <span>
                      22, Richmond Road, Bedford
                    </span>
                  </td>
                  <td
                    role="cell"
                  >
                    <span>
                      MK40 3DG
                    </span>
                  </td>
                  <td
                    role="cell"
                  >
                    <span
                      class="capitalize"
                    />
                  </td>
                  <td
                    role="cell"
                  >
                    <button
                      class="button   is-primary "
                      data-test=""
                      type="button"
                    >
                      Edit
                    </button>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </section>
      <div
        class="fade-in"
      >
        <section
          class="section is-flex is-centered has-padding has-margin has-background"
          data-test=""
        >
          <nav
            aria-label="pagination"
            class="pagination is-centered"
            role="navigation"
          >
            <a
              class="pagination-previous pagination-disabled"
            >
              Previous
            </a>
            <a
              class="pagination-next  "
            >
              Next page
            </a>
            <ul
              class="pagination-list"
            >
              <li>
                <a
                  aria-label="Goto page 1"
                  class="pagination-link is-current"
                >
                  1
                </a>
              </li>
              <li>
                <a
                  aria-label="Goto page 2"
                  class="pagination-link"
                >
                  2
                </a>
              </li>
              <li>
                <a
                  aria-label="Goto page 3"
                  class="pagination-link"
                >
                  3
                </a>
              </li>
            </ul>
          </nav>
        </section>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="section is-flex has-padding has-margin has-background justify-between items-center"
      data-test=""
    >
      <h3
        class="title is-3 mb-0"
        id=""
      >
        Showing Results for "1"
      </h3>
      <a
        href="/"
      >
        <button
          class="button   is-primary "
          data-test=""
          type="button"
        >
          New Search
        </button>
      </a>
    </section>
    <section
      class="section has-padding has-margin has-background"
      data-test=""
    >
      <div
        class="fade-in"
      >
        <div
          style="overflow: scroll;"
        >
          <table
            class="table is-striped is-fullwidth "
            role="table"
          >
            <thead>
              <tr
                role="row"
              >
                <th
                  colspan="1"
                  role="columnheader"
                >
                  Name
                </th>
                <th
                  colspan="1"
                  role="columnheader"
                >
                  Address
                </th>
                <th
                  colspan="1"
                  role="columnheader"
                >
                  Postcode
                </th>
                <th
                  colspan="1"
                  role="columnheader"
                >
                  Status
                </th>
                <th
                  colspan="1"
                  role="columnheader"
                />
              </tr>
            </thead>
            <tbody>
              <tr
                class=""
                role="row"
              >
                <td
                  role="cell"
                >
                  Dan Willis
                </td>
                <td
                  role="cell"
                >
                  <span>
                    7, Clyd Eplave
                  </span>
                </td>
                <td
                  role="cell"
                >
                  <span>
                    MK3 7QN
                  </span>
                </td>
                <td
                  role="cell"
                >
                  <span
                    class="capitalize"
                  />
                </td>
                <td
                  role="cell"
                >
                  <button
                    class="button   is-primary "
                    data-test=""
                    type="button"
                  >
                    Edit
                  </button>
                </td>
              </tr>
              <tr
                class=""
                role="row"
              >
                <td
                  role="cell"
                >
                  Cerys Haldane
                </td>
                <td
                  role="cell"
                >
                  <span>
                    102, Holwelbury Road
                  </span>
                </td>
                <td
                  role="cell"
                >
                  <span>
                    SG5 3FL
                  </span>
                </td>
                <td
                  role="cell"
                >
                  <span
                    class="capitalize"
                  />
                </td>
                <td
                  role="cell"
                >
                  <button
                    class="button   is-primary "
                    data-test=""
                    type="button"
                  >
                    Edit
                  </button>
                </td>
              </tr>
              <tr
                class=""
                role="row"
              >
                <td
                  role="cell"
                >
                  Daniel Scott
                </td>
                <td
                  role="cell"
                >
                  <span>
                    6, Lydbrook Lane, Woburn Sands
                  </span>
                </td>
                <td
                  role="cell"
                >
                  <span>
                    MK17 8GJ
                  </span>
                </td>
                <td
                  role="cell"
                >
                  <span
                    class="capitalize"
                  />
                </td>
                <td
                  role="cell"
                >
                  <button
                    class="button   is-primary "
                    data-test=""
                    type="button"
                  >
                    Edit
                  </button>
                </td>
              </tr>
              <tr
                class=""
                role="row"
              >
                <td
                  role="cell"
                >
                  Aidan Cruickshank
                </td>
                <td
                  role="cell"
                >
                  <span>
                    7, Church Lane, Oakley
                  </span>
                </td>
                <td
                  role="cell"
                >
                  <span>
                    MK43 7RJ
                  </span>
                </td>
                <td
                  role="cell"
                >
                  <span
                    class="capitalize"
                  />
                </td>
                <td
                  role="cell"
                >
                  <button
                    class="button   is-primary "
                    data-test=""
                    type="button"
                  >
                    Edit
                  </button>
                </td>
              </tr>
              <tr
                class=""
                role="row"
              >
                <td
                  role="cell"
                >
                  Danny Khan
                </td>
                <td
                  role="cell"
                >
                  <span>
                    7, Abraham Close, Willen Park
                  </span>
                </td>
                <td
                  role="cell"
                >
                  <span>
                    MK15 9JA
                  </span>
                </td>
                <td
                  role="cell"
                >
                  <span
                    class="capitalize"
                  />
                </td>
                <td
                  role="cell"
                >
                  <button
                    class="button   is-primary "
                    data-test=""
                    type="button"
                  >
                    Edit
                  </button>
                </td>
              </tr>
              <tr
                class=""
                role="row"
              >
                <td
                  role="cell"
                >
                  Ayaan Daniel
                </td>
                <td
                  role="cell"
                >
                  <span>
                    48, Pickering Drive, Emerson Valley
                  </span>
                </td>
                <td
                  role="cell"
                >
                  <span>
                    MK4 2EE
                  </span>
                </td>
                <td
                  role="cell"
                >
                  <span
                    class="capitalize"
                  />
                </td>
                <td
                  role="cell"
                >
                  <button
                    class="button   is-primary "
                    data-test=""
                    type="button"
                  >
                    Edit
                  </button>
                </td>
              </tr>
              <tr
                class=""
                role="row"
              >
                <td
                  role="cell"
                >
                  Lola Sheridan
                </td>
                <td
                  role="cell"
                >
                  <span>
                    Modbury House, The Close, Thornton
                  </span>
                </td>
                <td
                  role="cell"
                >
                  <span>
                    MK17 0HD
                  </span>
                </td>
                <td
                  role="cell"
                >
                  <span
                    class="capitalize"
                  />
                </td>
                <td
                  role="cell"
                >
                  <button
                    class="button   is-primary "
                    data-test=""
                    type="button"
                  >
                    Edit
                  </button>
                </td>
              </tr>
              <tr
                class=""
                role="row"
              >
                <td
                  role="cell"
                >
                  Brendan Mccrindle
                </td>
                <td
                  role="cell"
                >
                  <span>
                    Osprey Road, Biggleswade
                  </span>
                </td>
                <td
                  role="cell"
                >
                  <span>
                    SG18 8DZ
                  </span>
                </td>
                <td
                  role="cell"
                >
                  <span
                    class="capitalize"
                  />
                </td>
                <td
                  role="cell"
                >
                  <button
                    class="button   is-primary "
                    data-test=""
                    type="button"
                  >
                    Edit
                  </button>
                </td>
              </tr>
              <tr
                class=""
                role="row"
              >
                <td
                  role="cell"
                >
                  Danny Clark
                </td>
                <td
                  role="cell"
                >
                  <span>
                    30, Francis Groves Close, Bedford
                  </span>
                </td>
                <td
                  role="cell"
                >
                  <span>
                    MK41 7DH
                  </span>
                </td>
                <td
                  role="cell"
                >
                  <span
                    class="capitalize"
                  />
                </td>
                <td
                  role="cell"
                >
                  <button
                    class="button   is-primary "
                    data-test=""
                    type="button"
                  >
                    Edit
                  </button>
                </td>
              </tr>
              <tr
                class=""
                role="row"
              >
                <td
                  role="cell"
                >
                  Esme Sheridan
                </td>
                <td
                  role="cell"
                >
                  <span>
                    22, Richmond Road, Bedford
                  </span>
                </td>
                <td
                  role="cell"
                >
                  <span>
                    MK40 3DG
                  </span>
                </td>
                <td
                  role="cell"
                >
                  <span
                    class="capitalize"
                  />
                </td>
                <td
                  role="cell"
                >
                  <button
                    class="button   is-primary "
                    data-test=""
                    type="button"
                  >
                    Edit
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </section>
    <div
      class="fade-in"
    >
      <section
        class="section is-flex is-centered has-padding has-margin has-background"
        data-test=""
      >
        <nav
          aria-label="pagination"
          class="pagination is-centered"
          role="navigation"
        >
          <a
            class="pagination-previous pagination-disabled"
          >
            Previous
          </a>
          <a
            class="pagination-next  "
          >
            Next page
          </a>
          <ul
            class="pagination-list"
          >
            <li>
              <a
                aria-label="Goto page 1"
                class="pagination-link is-current"
              >
                1
              </a>
            </li>
            <li>
              <a
                aria-label="Goto page 2"
                class="pagination-link"
              >
                2
              </a>
            </li>
            <li>
              <a
                aria-label="Goto page 3"
                class="pagination-link"
              >
                3
              </a>
            </li>
          </ul>
        </nav>
      </section>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Result should match a snapshot when LOADING true 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="section is-flex has-padding has-margin has-background justify-between items-center"
        data-test=""
      >
        <h3
          class="title is-3 mb-0"
          id=""
        >
          Showing Results for ""
        </h3>
        <a
          href="/"
        >
          <button
            class="button   is-primary "
            data-test=""
            type="button"
          >
            New Search
          </button>
        </a>
      </section>
      <section
        class="section has-padding has-margin has-background"
        data-test=""
      >
        <div
          class="fade-in"
        >
          <div
            style="overflow: scroll;"
          >
            <table
              class="table is-striped is-fullwidth "
              role="table"
            >
              <thead>
                <tr
                  role="row"
                >
                  <th
                    colspan="1"
                    role="columnheader"
                  >
                    Name
                  </th>
                  <th
                    colspan="1"
                    role="columnheader"
                  >
                    Address
                  </th>
                  <th
                    colspan="1"
                    role="columnheader"
                  >
                    Postcode
                  </th>
                  <th
                    colspan="1"
                    role="columnheader"
                  >
                    Status
                  </th>
                  <th
                    colspan="1"
                    role="columnheader"
                  />
                </tr>
              </thead>
              <tbody />
            </table>
          </div>
        </div>
      </section>
      <div
        class="fade-in"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="section is-flex has-padding has-margin has-background justify-between items-center"
      data-test=""
    >
      <h3
        class="title is-3 mb-0"
        id=""
      >
        Showing Results for ""
      </h3>
      <a
        href="/"
      >
        <button
          class="button   is-primary "
          data-test=""
          type="button"
        >
          New Search
        </button>
      </a>
    </section>
    <section
      class="section has-padding has-margin has-background"
      data-test=""
    >
      <div
        class="fade-in"
      >
        <div
          style="overflow: scroll;"
        >
          <table
            class="table is-striped is-fullwidth "
            role="table"
          >
            <thead>
              <tr
                role="row"
              >
                <th
                  colspan="1"
                  role="columnheader"
                >
                  Name
                </th>
                <th
                  colspan="1"
                  role="columnheader"
                >
                  Address
                </th>
                <th
                  colspan="1"
                  role="columnheader"
                >
                  Postcode
                </th>
                <th
                  colspan="1"
                  role="columnheader"
                >
                  Status
                </th>
                <th
                  colspan="1"
                  role="columnheader"
                />
              </tr>
            </thead>
            <tbody />
          </table>
        </div>
      </div>
    </section>
    <div
      class="fade-in"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
